Digital/objects/History_Tracking__c.object
<CustomObject>
    <label>History Tracking</label>
    <nameField>
        <displayFormat>HT - {0000000000}</displayFormat>
        <label>History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DGTL_Brands</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Panties</fullName>
                </value>
                <value>
                    <fullName>Swim</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Sleep</fullName>
                </value>
                <value>
                    <fullName>Home page</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Bras</fullName>
                </value>
                <value>
                    <fullName>Lingerie</fullName>
                </value>
                <value>
                    <fullName>Sport</fullName>
                </value>
                <value>
                    <fullName>Lounge</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Tops</fullName>
                </value>
                <value>
                    <fullName>Bottoms</fullName>
                </value>
                <value>
                    <fullName>GRL PWR</fullName>
                </value>
                <value>
                    <fullName>Fragrance</fullName>
                </value>
                <value>
                    <fullName>Bags-and-Accessories</fullName>
                </value>
                <value>
                    <fullName>PINK Beauty</fullName>
                </value>
                <value>
                    <fullName>Trending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floorset_Plan_ID__c</fullName>
        <formula>Placement_Layout__r.Floorset_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floorset Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floorset_Plan__c</fullName>
        <formula>Placement_Layout__r.Floorset_Plan__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floorset Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placement Content</fullName>
                </value>
                <value>
                    <fullName>Placement Content Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>131071</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DGTL_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Placement_Content_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content Detail</label>
        <referenceTo>Placement_Content_Detail__c</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content</label>
        <referenceTo>Placement_Content__c</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placement_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Layout</label>
        <referenceTo>Placement_Layout__c</referenceTo>
        <relationshipLabel>History Tracking</relationshipLabel>
        <relationshipName>History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>History_Records</fullName>
        <active>true</active>
        <label>History Records</label>
    </recordTypes>
    <recordTypes>
        <fullName>OnChange</fullName>
        <active>true</active>
        <label>OnChange</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>History_Records</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>History_Tracking__c.History_Records</value>
        </filters>
        <label>History Records</label>
    </listViews>
    <listViews>
        <fullName>OnChange</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Owner__c</columns>
        <columns>Category__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Field_Name__c</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>History_Tracking__c.OnChange</value>
        </filters>
        <label>OnChange</label>
    </listViews>
</CustomObject>